# BigInt

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/BigInt/: BigInt.cpp  CMakeLists.txt
src/BigInt/include/BigInt/: BigInt.hpp
tests/: BigIntTest.cpp  CMakeLists.txt
